# to-fhir

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  build.gradle  release-please-config.json  settings.gradle
fhir-ig-constants/: README.md  build.gradle  package.json
fhir-ig-constants-csharp/: FhirIgConstants.slnx  generate-constants.sh  package.json
fhir-ig-constants-python/: pyproject.toml
fhir-ig-constants-python/scripts/: generate_constants.py
fhir-ig-constants-python/src/fhir_ig_constants/: __init__.py
fhir-ig-constants-python/src/fhir_ig_constants/de/medizininformatikinitiative/kerndatensatz/base/: __init__.py
fhir-ig-constants-python/src/fhir_ig_constants/de/medizininformatikinitiative/kerndatensatz/icu/: __init__.py
fhir-ig-constants-python/src/fhir_ig_constants/de/medizininformatikinitiative/kerndatensatz/laborbefund/: __init__.py
fhir-ig-constants-python/src/fhir_ig_constants/de/medizininformatikinitiative/kerndatensatz/medikation/: __init__.py
fhir-ig-constants-python/src/fhir_ig_constants/de/medizininformatikinitiative/kerndatensatz/onkologie/: __init__.py
fhir-ig-constants-python/tests/smoke/: test_coding.py
ig-codegen-python/: pyproject.toml
ig-codegen-python/src/ig_codegen/: __init__.py  cli.py  concept_constant.py  fhir_resource_summary.py  ig_codegen.py  ig_package_model.py  ig_package_scanner.py  name_utils.py  package_manifest.py  python_constants_generator.py
ig-codegen-python/src/ig_codegen/templates/: module.py.jinja2
ig-codegen-python/tests/: test_ig_codegen.py  test_ig_package_scanner.py  test_ig_package_scanner_layout_fallback.py  test_name_utils.py  test_python_constants_generator.py
ig-codegen-python/tests/resources/: package.json
(+92 files in other folders)
